[package]
name = "launchpad-pro-rs"
version = "0.1.0"
authors = ["James Hallowell"]
edition = "2021"

[dependencies]
spin = "0.5.2"
#midi-event = "0.2.1"
#midly = { version = "0.5.2", default-features = false }
#helgoboss-midi = { version = "0.2.0", default-features = false }
#midi-msg = { version = "0.4", default-features = false, features=["sysex"] , git = "https://github.com/AlexCharlton/midi-msg.git", rev = "1b160db0f915c06f2cbc27c5f054d9fd4fa98312" }
#embedded_midi = { version = "0.1.1" }
wmidi = { version = "4.0.6", default-features = false }
